[tool.poetry]
name = "ample-indexer"
version = "0.1.0"
description = ""
authors = ["radiantly <44368997+radiantly@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^3.141.0"
webdriver-manager = "^3.2.2"
requests = "^2.24.0"
rich = "^8.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
